--- a/SSBETES/SSBETES.csproj
+++ b/SSBETES/SSBETES.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\tModLoader.targets" />
   <PropertyGroup>
-    <AssemblyName>DBTBalance</AssemblyName>
+    <AssemblyName>oozaru</AssemblyName>
     <TargetFramework>net6.0</TargetFramework>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <LangVersion>latest</LangVersion>
@@ -11,14 +11,11 @@
     <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="dbzcalamity">
-      <HintPath>..\ModAssemblies\dbzcalamity_v1.0.0.3.dll</HintPath>
-    </Reference>
     <Reference Include="DBZGoatLib">
-      <HintPath>..\DBZGoatLib\bin\Debug\net6.0\DBZGoatLib.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Downloads\DBZGoatLib.dll</HintPath>
     </Reference>
     <Reference Include="DBZMODPORT">
-      <HintPath>..\ModAssemblies\DBZMODPORT_v0.3.3.dll</HintPath>
+      <HintPath>..\..\ModReader\DBZMODPORT\DBZMODPORT.dll</HintPath>
     </Reference>
   </ItemGroup>
 </Project>
